style.css
:root {
    --bg-theme: #65b891;
    --bg-theme2: #e7e8f8;
    --bg-theme3: #f8d7ff;
    --dark-font: rgb(75, 76, 82);

    --default-pad: calc(0.4rem + 1vw);
}

* {
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}
body {
    min-height: 100vh;
    display: grid;
    grid-template-columns: max(15vw, 275px) 2.5fr max(15vw, 275px);
    grid-template-rows: max-content 1fr;

}
header {
    background-color: var(--bg-theme3);
    padding: max(0.5vw, 0.5rem) var(--default-pad);
    grid-area: 1 / 2 / 2 / -1;
    display: grid;
    grid-template-columns: 2fr 1fr;
}
div#top {
    grid-area: 1 / 1 / 2 / -1;
    display: grid;
    grid-template-rows: subgrid;
    grid-template-columns: subgrid;

    input {
        background-color: var(--bg-theme2);
        border: 1px solid rgba(119, 119, 119, 0.356);
        border-radius: 10px;
        width: min(75%, 70ch)
    }
    div#top-left {
        grid-area: 1 / 1 / 2 / 2;
        text-align: center;
    }
    div#top-right {
        grid-area: 1 / 2 / 2 / 3;
        display: grid;
        grid-auto-columns: auto;
        grid-auto-flow: column;
        justify-items: center;
    }
    a {
        text-decoration: none;
        font-size: 1.1rem;
    }
}
div#bottom {
    grid-area: 2 / 1 / 3 / -1;
    display: grid;
    grid-auto-flow: column;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: min-content;

    #bottom-left {
        display: grid;
        grid-template-columns: 0.50fr repeat(2, 1fr);
        p {
            font-weight: 500;
        }
    }
    #bottom-right {
        max-width: 75%;
        grid-column: -2 / -1;
        display: grid;
        grid-auto-flow: column;
        grid-auto-columns: auto;
        grid-auto-rows: min-content;
        align-self: center;
        justify-content: space-evenly;
        gap: 1vw;
    }
    button {
        background-color: var(--bg-theme);
        border: 1px none;
        border-radius: 19px;
        padding: 0.5rem 1.5rem;
        width: 6.8rem;
        color: #FFF;
        text-align: center;
    }
}
.sidebar {
    padding: var(--default-pad);
    color: white;
    background-color: var(--bg-theme);
    grid-column: 1/2;
    grid-row: 1/-1;
    display: grid;
    grid-auto-rows: max-content;
}
div#logo-title {
    display: grid;
    grid-template-columns: auto 1fr;
}
.sidebar ul, main>aside ul  {
    list-style: none;
    margin: 0;
    padding: 0;
}

.sidebar nav {
    display: grid;
    grid-template-rows: auto 1fr 2fr;
}

.sidebar nav ul:last-child {
    grid-row: -2 / -1;
}

main {
    background-color: var(--bg-theme2);
    padding: var(--default-pad);
    box-shadow: inset 0px 9px 10px -13px #000000a2;
    grid-area: 2 / 2 / -1 / -1;
    display: grid;
    grid-template-columns: subgrid;
    grid-template-rows: 2em 1fr;
    grid-auto-flow: column;
}

.card {
    background-color: #FFF;
    border-radius: 8px;
    padding: var(--default-pad);
    line-height: 1.25;
}

.card p {
    color: var(--dark-font);
}
.card-wrapper {
    padding: var(--default-pad);
    display: grid;
    gap: 15px;
    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
    grid-auto-rows: max-content;

    article {
        background: #ff0000;
        background: linear-gradient(90deg, var(--bg-theme) 0.5vw, rgba(255, 255, 255, 1) 0.5vw);
        height: 275px;
        overflow: auto;
        padding: var(--default-pad);
        border-color: var(--bg-theme3);
        border-radius: 8px;
    }
}
.side-cards-wrapper {
    display: grid;
    gap: 15px;
    grid-template-rows: repeat(4, 1fr);

    p {
        font-size: 0.75rem;
    }
}


#announcements-wrapper {
    display: grid;
    gap: 10px;
    grid-template-rows: repeat(3, 1fr);
}

#trend-wrapper>ul {
    display: grid;
    gap: 10px;
}

#trend-wrapper ul>li p:first-child {
    color: #000;
    font-size: 0.9rem;
    font-weight: 500;
}

